# starknet-simulator

./: Cargo.toml  README.md  output.txt
contracts/example-2/src/: lib.cairo
contracts/example1/src/: lib.cairo
contracts/example_2/: Scarb.toml
contracts/example_2/src/: lib.cairo
contracts/example_3/: Scarb.toml
contracts/example_3/src/: erc20.cairo  staketoken.cairo
src/: main.rs
src/cairo_integration/: cairo.rs  mod.rs
src/cairo_sierra/: aliased.rs  cairo.rs  cairo_contract.rs  cairo_contract_helper.rs  cairo_helper.rs  compile.rs  mod.rs
src/casm_sierra/: cairo.rs  cairo_contract.rs  cairo_contract_helper.rs  contract_segmentation.rs  felt252_serde.rs  felt252_vec_compression.rs  mod.rs
src/compiler/: cairo_run.rs  compile.rs  compile_contract.rs  helper.rs  mod.rs
src/trace/: cairo_runner.rs
