[package]
name = "starknet-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.75"
itertools = "0.10.1"
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
indexmap = "1.7.0"
num-bigint = { version = "0.4", default-features = false }
num-integer = "0.1"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.18.0"
cairo-felt = "0.9.1"
convert_case = "0.6.0"
smol_str = { version = "0.2.0", features = ["serde"] }
starknet-crypto = "0.6.2"
tempfile = "3.2"
thiserror = "1.0.50"
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-compiler", branch = "main" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-project", branch = "main" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-filesystem", branch = "main" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-sierra", branch = "main" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-sierra-generator", branch = "main" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-diagnostics", branch = "main" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-syntax", branch = "main" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-lowering", branch = "main" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-utils", branch = "main" }
cairo-lang-starknet-classes = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-starknet-classes", branch = "main" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-defs", branch = "main" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-starknet", branch = "main" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-sierra-to-casm", branch = "main"}
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-casm", branch = "main"}
actix-cors = "0.7.0"

[workspace]
resolver = "2"


[workspace.package]
version = "2.6.3"
edition = "2021"
repository = "https://github.com/NethermindEth/starknet-simulator/"
license = "Apache-2.0"
license-file = "LICENSE"
