[package]
name = "starknet-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
anyhow = "1.0.75"
itertools = "0.10.1"
serde = { version = "1.0.192", default-features = false, features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
clap = { version = "4.4", features = ["derive"] }
indexmap = "1.7.0"
num-bigint = { version = "0.4", default-features = false }
num-integer = "0.1"
num-traits = { version = "0.2", default-features = false }
once_cell = "1.18.0"
cairo-felt = "0.9.1"
convert_case = "0.6.0"
smol_str = { version = "0.2.0", features = ["serde"] }
starknet-crypto = "0.6.2"
tempfile = "3.2"
thiserror = "1.0.50"
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-compiler", tag = "v2.5.4" }
cairo-lang-project = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-project", tag = "v2.5.4" }
cairo-lang-filesystem = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-filesystem", tag = "v2.5.4" }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-sierra", tag = "v2.5.4" }
cairo-lang-sierra-gas = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-sierra-gas", tag = "v2.5.4" }
cairo-lang-sierra-generator = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-sierra-generator", tag = "v2.5.4" }
cairo-lang-sierra-type-size = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-sierra-type-size", tag = "v2.5.4" }
cairo-lang-diagnostics = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-diagnostics", tag = "v2.5.4" }
cairo-lang-syntax = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-syntax", tag = "v2.5.4" }
cairo-lang-lowering = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-lowering", tag = "v2.5.4" }
cairo-lang-utils = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-utils", tag = "v2.5.4" }
cairo-lang-defs = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-defs", tag = "v2.5.4" }
cairo-lang-starknet = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-starknet", tag = "v2.5.4" }
cairo-lang-sierra-to-casm = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-sierra-to-casm", tag = "v2.5.4" }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo/", package = "cairo-lang-casm", tag = "v2.5.4" }
cairo1-run = { git = "https://github.com/lambdaclass/cairo-vm/", package = "cairo1-run", branch = "main" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm/", package = "cairo-vm", branch = "main" }
cairo-lang-sierra-2-point-6 = { package = "cairo-lang-sierra", version = "2.6.3" }
cairo-lang-starknet-classes-2-point-6 = { package = "cairo-lang-starknet-classes", version = "2.6.3" }
starknet-types-core = { version = "0.1.0", default-features = false, features = ["serde", "curve", "num-traits", "hash"] }


[workspace]
resolver = "2"


[workspace.package]
version = "2.6.3"
edition = "2021"
repository = "https://github.com/NethermindEth/starknet-simulator/"
license = "Apache-2.0"
license-file = "LICENSE"
